# translation-service

./: .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml
app/application/dto/: cgpt_dto.py  translation_dto.py
app/application/protocols/: cgpt_protocols.py  translation_protocols.py
app/application/usecase/: cgpt_usecase.py  translation_usecase.py
app/domain/entity/: cgpt.py  translation.py
app/domain/exception/: cgpt_exeption.py  translation_exception.py
app/infrastructure/: di.py
app/infrastructure/adapters/: cgpt_translator.py  google_translator.py
app/presentation/api/: depends.py
app/presentation/api/v1/: cgpt_controller.py  translation_controller.py
app/presentation/schemas/: ai_translation_schema.py  translation_schema.py
